fix supporters block on dark mode

--- a/docs/assets/css/extra.css
+++ b/docs/assets/css/extra.css
@@ -39,10 +39,8 @@
     border-bottom-color: #273646;
 }
 
-[data-md-color-scheme="state"] {
-    .phalcon-blog__sponsors-items a {
-        background-color: #ffffffb3;
-    }
+[data-md-color-scheme="state"] .phalcon-blog__sponsors-items a {
+    background-color: #ffffffb3;
 }
 
 /* Releases page table */
